fix(MultiStepIndicator): fix invisible text on dark type pending hover in light mode (#3414)

--- a/packages/core/src/components/MultiStepIndicator/components/StepIndicator/StepIndicator.module.scss
+++ b/packages/core/src/components/MultiStepIndicator/components/StepIndicator/StepIndicator.module.scss
@@ -226,7 +226,8 @@
 }
 
 .statusPendingNumberContainer.typeDarkNumberContainer:hover {
-  background-color: var(--text-color-on-inverted);
+  background-color: var(--inverted-color-background);
+  color: var(--text-color-on-inverted);
 }
 
 @include keyframe(step-indicatior-circle-pop-elastic) {
